--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -13,12 +13,17 @@
 
 	<div class="w-full text-justify text-black dark:text-white lg:w-1/2">
 		<p class="mb-2">
-			Here is your description in English! Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-			sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-			irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-			id est laborum
+			Proactive and results-oriented professional in the midst of a career transition into the
+			dynamic realm of IT, armed with solid programming knowledge from Pomeranian Start.IT course.
+			My journey thus far has equipped me with a strong foundation in diverse areas, ranging from EU
+			funds acquisition and IoT product development to strategic company leadership and team
+			management. My proficiency in these domains reflects my adaptability, analytical acumen and
+			the ability to effectively navigate complex projects. I am excited to leverage my existing
+			knowledge and skill set to make a seamless transition into the IT industry, particularly in
+			the role of a Junior Frontend Developer. My background in strategic thinking, team management
+			and Agile methodolofies will undoubtedly aid me in overcoming the challenges of web
+			development. I am enthusiastic about contributing to cutting-edge projects and bringing a
+			fresh perspective to the world of IT as a valuable member of your team.
 		</p>
 	</div>
 </section>
