--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,16 +7,13 @@ export interface LayoutProps {
 	title: string;
 }
 
-const { title = 'John Doe | Web developer' } = Astro.props as LayoutProps;
+const { title = 'Amadeusz Szewczyk | Junior Frontend Developer' } = Astro.props as LayoutProps;
 ---
 
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth" data-testid="html">
 	<head>
-		<SEO
-			title="A Very Descriptive Title"
-			description="A heavily optimized description full of well-researched keywords."
-		/>
+		<SEO title="My portfolio" description="Amadeusz Szewczyk | My portfolio" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -32,8 +29,6 @@ const { title = 'John Doe | Web developer' } = Astro.props as LayoutProps;
 		<slot />
 		<Footer />
 		<style is:global>
-			/* Improve Page speed */
-			/* https://css-tricks.com/almanac/properties/c/content-visibility/ */
 			img {
 				content-visibility: auto;
 			}
