--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -8,7 +8,11 @@ import Social from '@components/ui/Social.astro';
 	id="contact"
 	class="flex flex-col flex-wrap items-center justify-center gap-8 text-black dark:text-white lg:mb-0 lg:h-screen"
 >
-	<Button size={'lg'} style={'primary'} name="Contact">Say hello!</Button>
+	<a href="mailto:amadeusz.szewczyk@gmail.com">
+		<Button size={'lg'} style={'primary'} name="Contact">
+			Contact me: amadeusz.szewczyk@gmail.com
+		</Button>
+	</a>
 	<hr class="w-1/2" />
 	<div class="flex flex-col gap-8 lg:flex lg:flex-row lg:gap-20">
 		<Social />
