--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,8 @@
 ---
-import Button from '@components/ui/Button.astro';
 import ToggleTheme from '@components/ui/ToggleTheme.astro';
 import { Astronav, MenuIcon, MenuItems } from 'astro-navbar';
+
+const CV_URL = 'https://alteaconsult.eu/wp-content/uploads/2023/09/CV.pdf';
 
 const menuitems = [
 	{
@@ -22,7 +23,11 @@ const menuitems = [
 <header data-testId="header" class="my-5 flex flex-col items-center justify-between lg:flex-row">
 	<Astronav>
 		<div class="flex w-full items-center justify-between lg:w-auto">
-			<Button size={'sm'} name="Download CV">Download CV</Button>
+			<a
+				href={CV_URL}
+				target="_blank"
+				class="text-black hover:text-orange dark:text-white dark:hover:text-orange">Show CV</a
+			>
 			<div class="block lg:hidden">
 				<MenuIcon class="h-4 w-4 text-black dark:text-white" />
 			</div>
@@ -36,7 +41,7 @@ const menuitems = [
 								<a
 									aria-label="navigation link"
 									href={item.path}
-									class="flex py-2 text-black hover:text-orange dark:text-white dark:hover:text-orange lg:px-3"
+									class="hover:text-orange dark:hover:text-orange flex py-2 text-black dark:text-white lg:px-3"
 								>
 									{item.title}
 								</a>
