--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,8 +7,8 @@
 		>
 			<span class="text-orange"> Amadeusz Szewczyk</span>
 		</a>
-		Assets designed by <a href="https://pixabay.com" target="_blank" rel="noopener"
-			><span class="text-orange">Pixabay</span></a
+		Assets designed by <a href="https://www.midjourney.com/app/" target="_blank" rel="noopener"
+			><span class="text-orange">Midjourney</span></a
 		>
 	</p>
 </footer>
