--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,4 @@
 ---
-import heroImage from '@assets/images/hero.png';
-import Button from '@components/ui/Button.astro';
 ---
 
 <section
@@ -10,13 +8,9 @@ import Button from '@components/ui/Button.astro';
 	<div class="mb-10 flex flex-col items-center lg:mb-0 lg:w-1/2">
 		<div>
 			<h1 class="mb-10 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
-				Hi! My name is <span class="text-orange">Amadeusz Szewczyk</span> and I am a web developer based
-				in Gdańsk.
+				Hi! My name is <span class="text-orange">Amadeusz Szewczyk</span> and I am a Junior Frontend
+				Developer based in Gdańsk.
 			</h1>
 		</div>
-		<div class="mb-10">
-			<Button style={'primary'} size={'lg'} class={'flex'} name="learn more">Learn more</Button>
-		</div>
 	</div>
-	<div data-testid="hero-img" class="mb-10 flex w-1/2 items-center justify-center"></div>
 </section>
