--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -15,12 +15,11 @@ const { url = '#', alt = 'Project image', title = 'Project title', tags = ['Tags
 <section class="w-full p-4 md:w-1/2 lg:w-1/3">
 	<article
 		data-testId="card"
-		class="rounded-xl bg-white p-3 shadow-lg duration-100 hover:scale-105 hover:transform hover:shadow-xl"
+		class="flex flex-col items-center rounded-xl bg-white p-3 shadow-lg duration-100 hover:scale-105 hover:transform hover:shadow-xl"
 	>
-		<a href={url} aria-label="link to project">
-			<div class="relative flex items-end overflow-hidden rounded-xl"></div>
+		<a href={url} aria-label="link to project" class="w-full text-center">
 			<div class="mt-1 p-2">
-				<h3 class="text-xl text-orange lg:text-2xl">{title}</h3>
+				<h3 class="text-center text-xl text-orange lg:text-2xl">{title}</h3>
 				<Tags tags={tags} />
 			</div>
 		</a>
