--- a/src/components/ui/Tags.astro
+++ b/src/components/ui/Tags.astro
@@ -8,9 +8,9 @@ const { tags } = Astro.props;
 
 {
 	tags && (
-		<div class="mt-2 flex w-2/3 flex-row flex-wrap justify-between">
+		<div class="items-center justify-center">
 			{tags.map((tag) => (
-				<span class="inline-block rounded py-2 text-xs text-black  lg:py-1">#{tag}</span>
+				<span class="inline-block rounded px-2 py-2 text-xs text-black lg:py-1">#{tag}</span>
 			))}
 		</div>
 	)
