--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -10,7 +10,7 @@ import Social from '@components/ui/Social.astro';
 >
 	<a href="mailto:amadeusz.szewczyk@gmail.com">
 		<Button size={'lg'} style={'primary'} name="Contact">
-			Contact me: amadeusz.szewczyk@gmail.com
+			amadeusz.szewczyk@gmail.com
 		</Button>
 	</a>
 	<hr class="w-1/2" />
