--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from 'astro:assets';
+import myImage from '../assets/images/logo.png'
 ---
 
 <section
@@ -8,9 +10,18 @@
 	<div class="mb-10 flex flex-col items-center lg:mb-0 lg:w-1/2">
 		<div>
 			<h1 class="mb-10 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
-				Hi! My name is <span class="text-orange">Amadeusz Szewczyk</span> and I am a Junior Frontend
-				Developer based in Gdańsk.
+				Hi! My name is <span class="text-orange">Amadeusz Szewczyk</span> and I am an aspiring Frontend Developer from Gdańsk.
 			</h1>
 		</div>
+	</div>
+	<div data-testid="hero-img" class="mb-10 flex w-1/2 items-center justify-center">
+		<Image
+			src={myImage}
+			alt="Coding girl"
+			format="png"
+			width={600}
+			height={600}
+			loading="eager"
+		/>
 	</div>
 </section>
